--- a/index.html
+++ b/index.html
@@ -10,24 +10,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   
 </head>
 <body>
-<div class="container">
-  <!-- <div class="image-container"> -->
-  <img src="./images/image-qr-code.png" alt="">
-<!-- </div> -->
-  <div class="text-container">
-    <h1 class="title">Improve your front-end<br /> skills by building projects</h1>  
-    <p class="description">Scan the QR code to visit Frontend<br /> Mentor and take your coding skills<br /> to the next level</p>
-  </div>
-</div>
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Mac</a>.
-  </div>
+  <main>
+    <div class="container">
+      <img src="./images/image-qr-code.png" alt="qr code image">
+      <div class="text-container">
+        <h1 class="title">Improve your front-end<br /> skills by building projects</h1>  
+        <p class="description">Scan the QR code to visit Frontend<br /> Mentor and take your coding skills<br /> to the next level</p>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Mac</a>.
+    </div>
+  </footer>
 </body>
 </html>
